# origyn-sns

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  proposal_backend_template.md  proposal_frontend_template.md
backend/canisters/collection_index/impl/: Cargo.toml
backend/canisters/collection_index/impl/src/: lib.rs  memory.rs  state.rs  utils.rs
backend/canisters/collection_index/impl/src/jobs/: compute_stats.rs  mod.rs
backend/canisters/collection_index/impl/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
backend/canisters/collection_index/impl/src/model/: collection.rs
backend/canisters/collection_index/impl/src/queries/: candid.rs  get_categories.rs  get_collection_by_principal.rs  get_collections.rs  get_overall_stats.rs  get_user_collections.rs  http_request.rs  mod.rs  search_collections.rs
backend/canisters/collection_index/impl/src/services/: mod.rs  origyn_nft.rs
backend/canisters/collection_index/impl/src/updates/: add_authorised_principal.rs  insert_category.rs  insert_collection.rs  insert_fake_collection.rs  mod.rs  remove_category.rs  remove_collection.rs  set_category_hidden.rs  set_category_visibility.rs  toggle_promoted.rs  update_collection.rs  update_collection_category.rs
backend/canisters/nft_index/api/: Cargo.toml  can.did
backend/canisters/nft_index/api/src/: lib.rs
backend/canisters/nft_index/api/src/lifecycle/: init.rs
backend/canisters/nft_index/api/src/queries/: get_certificates_by_category.rs  get_certificates_by_collection_id.rs  get_collections.rs  mod.rs
backend/canisters/nft_index/api/src/types/: certificate.rs  errors.rs  mod.rs
backend/canisters/nft_index/api/src/updates/: insert_certificates.rs  insert_collection.rs  mod.rs
backend/canisters/ogy_token_swap/api/: Cargo.toml  can.did
backend/canisters/ogy_token_swap/api/src/: consts.rs  lib.rs
backend/canisters/ogy_token_swap/api/src/lifecycle/: init.rs
backend/canisters/ogy_token_swap/api/src/queries/: get_swap_info.rs  list_requesting_principals.rs  list_swapping_statistics.rs  mod.rs
backend/canisters/ogy_token_swap/api/src/types/: mod.rs  requesting_principals.rs  token_swap.rs
backend/canisters/ogy_token_swap/api/src/updates/: mod.rs  recover_stuck_burn.rs  recover_stuck_transfer.rs  request_deposit_account.rs  restore_archived_swap.rs  swap_tokens.rs  update_swap_status.rs  update_white_list_principals.rs  withdraw_deposit.rs
backend/canisters/ogy_token_swap/impl/: Cargo.toml
backend/canisters/ogy_token_swap/impl/src/: consts.rs  guards.rs  lib.rs  memory.rs  state.rs
backend/canisters/ogy_token_swap/impl/src/jobs/: mod.rs  sync_governance.rs
backend/canisters/ogy_token_swap/impl/src/lifecycle/: init.rs
backend/canisters/ogy_token_swap/impl/src/model/: deposit_principals.rs  mod.rs  token_swap.rs
backend/canisters/ogy_token_swap/impl/src/queries/: candid.rs  get_deposit_principals.rs  get_swap_info.rs  list_requesting_principals.rs  list_swapping_statistics.rs  mod.rs  request_deposit_account.rs
backend/canisters/ogy_token_swap/impl/src/updates/: mod.rs  recover_stuck_burn.rs  recover_stuck_transfer.rs  remove_swap_entry.rs  request_deposit_account.rs  restore_archived_swap.rs  swap_tokens.rs  update_swap_status.rs  update_white_list_principals.rs  withdraw_deposit.rs
backend/canisters/sns_rewards/impl/: Cargo.toml
backend/canisters/sns_rewards/impl/src/: lib.rs  memory.rs  state.rs  utils.rs
backend/canisters/sns_rewards/impl/src/jobs/: burn_job.rs  distribute_rewards.rs  mod.rs  reserve_pool_distribution.rs  (+1 more)
backend/canisters/super_stats_v3/api/: Cargo.toml  can.did
backend/canisters/super_stats_v3/api/src/: lib.rs
backend/canisters/super_stats_v3/c2c_client/: Cargo.toml
backend/canisters/super_stats_v3/c2c_client/src/: lib.rs
backend/canisters/token_metrics/impl/: Cargo.toml
backend/canisters/token_metrics/impl/src/: consts.rs  custom_types.rs  guards.rs  lib.rs  memory.rs  state.rs  utils.rs
backend/integration_tests/: Cargo.toml
backend/integration_tests/src/: counter.rs  init.rs  lib.rs  ogy_legacy_ledger.rs  utils.rs  wasms.rs
backend/integration_tests/src/canister_jobs_suite/: init.rs  mod.rs
backend/integration_tests/src/canister_jobs_suite/tests/: daily_jobs.rs  mod.rs
backend/integration_tests/src/client/: collection_index.rs  icrc1.rs  macros.rs  mod.rs  ogy_legacy_ledger.rs  ogy_token_swap.rs  origyn_nft_reference.rs  pocket.rs  rewards.rs  sns_governance.rs  super_stats.rs  token_metrics.rs
backend/integration_tests/src/collection_index_suite/: init.rs  mod.rs  nft_utils.rs
backend/integration_tests/src/collection_index_suite/tests/: collection_index.rs  mod.rs  test_categories.rs  test_collections.rs
backend/integration_tests/src/daily_jobs_suite/: init.rs  mod.rs
backend/integration_tests/src/daily_jobs_suite/tests/: daily_jobs.rs
backend/integration_tests/src/ogy_swap_suite/: init.rs
backend/integration_tests/src/ogy_swap_suite/tests/: mod.rs  ogy_legacy_ledger.rs  ogy_new_ledger.rs  ogy_token_swap.rs  withdraw_deposit.rs
backend/integration_tests/src/setup/: mod.rs  setup_ledger.rs  setup_sns.rs
backend/integration_tests/src/sns_rewards_suite/: init.rs  mod.rs
backend/integration_tests/src/sns_rewards_suite/setup/: mod.rs  setup.rs  setup_rewards.rs
backend/integration_tests/src/sns_rewards_suite/tests/: mod.rs  test_distribute_rewards.rs  test_ogy_burn.rs  test_reserve_pool_distribution.rs  test_reward_claim.rs  test_reward_token_types.rs  test_synchronise_neurons.rs
backend/integration_tests/src/super_stats_suite/: init.rs  mod.rs
backend/integration_tests/src/super_stats_suite/tests/: mod.rs  super_stats.rs
backend/integration_tests/src/tests/: mod.rs  ogy_legacy_ledger.rs  ogy_new_ledger.rs  ogy_swap.rs  ogy_token_swap.rs
backend/integration_tests/src/token_metrics_suite/: init.rs  mod.rs
backend/integration_tests/src/token_metrics_suite/tests/: mod.rs  test_proposals_metrics.rs  test_reward_token_types.rs
backend/integration_tests/wasms/: ogy-legacy-ledger.wasm
(+983 files in other folders)
