[workspace]
members = [
  "backend/canisters/token_metrics/impl",
  "backend/external_canisters/sns_governance/api",
  "backend/external_canisters/sns_governance/c2c_client",
  "backend/canisters/ogy_token_swap/impl",
  "backend/canisters/super_indexer_v3",
  "backend/canisters/super_stats_v3",
  "backend/canisters/tx_store_v3",
  "backend/external_canisters/icrc_ledger/api",
  "backend/external_canisters/icrc_ledger/c2c_client",
  "backend/external_canisters/ogy_legacy_ledger/api",
  "backend/external_canisters/ogy_legacy_ledger/c2c_client",
  "backend/external_canisters/sns_governance/api",
  "backend/external_canisters/sns_governance/c2c_client",
  "backend/integration_tests",
  "backend/libraries/candid_gen",
  "backend/libraries/canister_client",
  "backend/libraries/canister_client_macros",
  "backend/libraries/canister_logger",
  "backend/libraries/canister_state_macros",
  "backend/libraries/canister_time",
  "backend/libraries/canister_tracing_macros",
  "backend/libraries/http_request",
  "backend/libraries/serializer",
  "backend/libraries/stable_memory",
  "backend/libraries/types",
  "backend/libraries/utils",
]
resolver = "2"

[profile.release]
lto = "thin"
panic = "abort"

[workspace.dependencies]
candid = { version = "0.10.2" }
ciborium = "0.2.2"
futures = "0.3.29"
# Enable `custom` feature of k256's getrandom dependency. See icp_neuron/impl/src/ecdsa.rs for more details.
getrandom = { version = "0.2.12", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.13.1"
ic-cdk-macros = "0.9.0"
ic-cdk-timers = "0.7.0"
ic-ledger-types = "0.10.0"
ic-stable-structures = "0.6.1"
ic-transport-types = "0.34.0"
ic0 = "0.21.1"
icrc-ledger-types = "0.1.5"
k256 = "0.13.1"
lazy_static = "1.4.0"
pocket-ic = "2.2.0"
proc-macro2 = "1.0.78"
quote = "1.0.33"
rmp-serde = "1.1.2"
serde = "1.0.196"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.108"
sha2 = "0.10.8"
syn = "2.0.39"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
num-bigint = "0.4.4"
