[package]
name = "ogy_token_swap_api"
version = "0.1.0"
description = "Token swap canister for legacy OGY token to new OGY token."
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
candid = { workspace = true }
ledger_utils = { path = "../../../libraries/ledger_utils" }
canister_logger = { path = '../../../libraries/canister_logger' }
canister_state_macros = { path = '../../../libraries/canister_state_macros' }
canister_time = { path = '../../../libraries/canister_time' }
canister_tracing_macros = { path = '../../../libraries/canister_tracing_macros' }
http_request = { path = '../../../libraries/http_request' }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
serde_json = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
serializer = { path = '../../../libraries/serializer' }
sns_governance_canister = { path = '../../../external_canisters/sns_governance/api' }
sns_governance_canister_c2c_client = { path = '../../../external_canisters/sns_governance/c2c_client' }
icrc_ledger_canister_c2c_client = { path = "../../../external_canisters/icrc_ledger/c2c_client" }
stable_memory = { path = '../../../libraries/stable_memory' }
types = { path = '../../../libraries/types' }
utils = { path = '../../../libraries/utils' }
tracing = { workspace = true }
futures = { workspace = true }
num-bigint = { workspace = true }
candid_gen = { path = "../../../libraries/candid_gen" }
