[package]
name = "ogy_token_swap"
version = "0.1.0"
description = "Canister to swap legacy OGY token to new OGY token."
edition = "2021"
license = "AGPL-3.0-only"

[features]
inttest = []


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
canister_logger = { path = '../../../libraries/canister_logger' }
canister_state_macros = { path = '../../../libraries/canister_state_macros' }
canister_time = { path = '../../../libraries/canister_time' }
canister_tracing_macros = { path = '../../../libraries/canister_tracing_macros' }
futures = { workspace = true }
http_request = { path = '../../../libraries/http_request' }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
icrc_ledger_canister_c2c_client = { path = "../../../external_canisters/icrc_ledger/c2c_client" }
ic-ledger-types = { workspace = true }
ledger_utils = { path = "../../../libraries/ledger_utils" }
num-bigint = { workspace = true }
ogy_token_swap_api = { path = "../api" }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serializer = { path = '../../../libraries/serializer' }
stable_memory = { path = '../../../libraries/stable_memory' }
tracing = { workspace = true }
types = { path = '../../../libraries/types' }
utils = { path = '../../../libraries/utils' }
