[package]
name = "super_stats_v3_c2c_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
canister_client = { path = "../../../libraries/canister_client" }
ic-cdk = { workspace = true }
super_stats_v3 = { path = "../" }
types = { path = "../../../libraries/types" }
num-bigint = "0.4.4"
ic-stable-memory = "0.4.4"