[package]
name = "super_stats_v3_c2c_client"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
canister_client = { path = "../../../libraries/canister_client" }
ic-cdk = { workspace = true }
super_stats_v3_api = { path = "../api" }
types = { path = "../../../libraries/types" }
num-bigint = "0.4.4"
ic-stable-memory = "0.4.4"