[package]
name = "token_metrics"
version = "0.1.0"
description = "Canister to expose metrics about the token."
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
candid = { workspace = true }
canister_logger = { path = '../../../libraries/canister_logger' }
canister_state_macros = { path = '../../../libraries/canister_state_macros' }
canister_time = { path = '../../../libraries/canister_time' }
canister_tracing_macros = { path = '../../../libraries/canister_tracing_macros' }
futures = { workspace = true }
http_request = { path = '../../../libraries/http_request' }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serializer = { path = '../../../libraries/serializer' }
super_stats_v3_c2c_client = { path = "../../../canisters/super_stats_v3/c2c_client" }
sns_governance_canister = { path = '../../../external_canisters/sns_governance/api' }
sns_governance_canister_c2c_client = { path = '../../../external_canisters/sns_governance/c2c_client' }
icrc_ledger_canister_c2c_client = { path = "../../../external_canisters/icrc_ledger/c2c_client" }
ledger_utils = { path = "../../../libraries/ledger_utils" }
num-bigint = { workspace = true }
serde_bytes = { workspace = true }
stable_memory = { path = '../../../libraries/stable_memory' }
tracing = { workspace = true }
types = { path = '../../../libraries/types' }
utils = { path = '../../../libraries/utils' }
